<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/menu_scan_toggle"
      android:title="@string/scan_start"
      app:showAsAction="always|withText" />
  <item
      android:id="@+id/menu_alerts"
      android:title="@string/alerts"
      app:showAsAction="never" />
  <item
      android:id="@+id/menu_groups"
      android:title="@string/affinity_groups"
      app:showAsAction="never" />
  <item
      android:id="@+id/menu_continuous_scanning"
      android:checkable="true"
      android:title="@string/continuous_scanning"
      app:showAsAction="never" />
  <item
      android:id="@+id/menu_diagnostics"
      android:title="@string/diagnostics"
      app:showAsAction="never" />
  <item
      android:id="@+id/menu_compact_cards"
      android:checkable="true"
      android:title="@string/compact_cards"
      app:showAsAction="never" />
  <item
      android:id="@+id/menu_version"
      android:enabled="false"
      android:title="@string/version_label"
      app:showAsAction="never" />
</menu>
