<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:paddingTop="8dp">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/alert_type_label"
    android:textColor="@color/urchin_on_background" />

  <Spinner
    android:id="@+id/alertTypeSpinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/alertTargetInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/alertTargetInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/urchin_on_surface"
      android:textColorHint="@color/urchin_secondary" />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_emoji_label"
        android:textColor="@color/urchin_on_background" />

      <Spinner
        android:id="@+id/alertEmojiSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_sound_label"
        android:textColor="@color/urchin_on_background" />

      <Spinner
        android:id="@+id/alertSoundSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp" />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>
